--- a/PreliminaryAirframe/Tables/heavyframes.tex
+++ b/PreliminaryAirframe/Tables/heavyframes.tex
@@ -1,5 +1,5 @@
 \begin{tabular}{llllll}
-Heavy Frame & Mass (Kg) & Web Thickness (m) & Flange Thickness & Web Height (m) & Flange Length (m) \\ 
+Heavy Frame & Mass (Kg) & t_{Web} (m) & t_{Flange} & l_{Web}(m) & l_{Flange} (m) \\ 
 \hline 
 Wing Front & 27.3 & 0.003 & 0.003 & 0.094 & 0.3 \\ 
 Wing Rear & 28.3 & 0.06 & 0.003 & 0.01 & 0.3 \\ 
