final fuselage configuration

--- a/PreliminaryAirframe/Tables/fuselage_stringerpanel_table_raw.tex
+++ b/PreliminaryAirframe/Tables/fuselage_stringerpanel_table_raw.tex
@@ -1,12 +1,12 @@
 \begin{tabular}{lll}
 & Units & Value \\ 
 \hline 
-Weight & N & 227.2 \\ 
+Weight & Kg & 208.6 \\ 
 Fuselage Skin Thickness & mm & 1 \\ 
-Number of Stringers & - & 69 \\ 
+Number of Stringers & - & 75 \\ 
 Stringer Section Type & - & Z \\ 
 Stringer Thickness & mm & 1 \\ 
-Stringer Web Height & mm & 16.3 \\ 
+Stringer Web Height & mm & 9.9 \\ 
 Stringer Web to Flange Ratio & - & 0.3 \\ 
 \hline 
 \end{tabular}
